<resources>
    <!--app information-->
    <string name="app_name">Coffee Beans Life</string>

    <!-- temp column -->
    <string name="temp_beans_label">豆溫:</string>
    <string name="temp_stove_label">爐溫:</string>
    <string name="temp_environment_label">環溫:</string>
    <string name="first_crack_label">一爆:</string>
    <string name="second_crack_label">二爆:</string>
    <string name="run_time_label">時間:</string>


    <string name="temp_icon">爐溫Icon</string>

    <!--<string name="menu_main_conn">連接裝置</string>-->
    <!--<string name="waitGetDeviceName">裝置連接時將顯示裝置名稱</string>-->

    <string name="cancel">取消</string>
    <string name="search">搜尋</string>
    <string name="device">裝置</string>

    <string name="no_device_connection">尚未連線到裝置</string>
    <string name="no_action_start">尚未啟動</string>
    <string name="no_support_bluetooth">該裝置不支援藍芽裝置</string>
    <string name="no_enable_bluetooth">尚未開啟藍芽</string>

    <string name="need_action_stop">關閉連線前需先關閉</string>

    <string name="selectBluetoothDevice">選擇連線裝置</string>
    <string name="menu_scan">搜尋</string>
    <string name="menu_stop">停止</string>

    <string name="ok">確定</string>
    <string name="add">新增</string>

    <!-- Menu items -->
    <!--<string name="menu_main_conn">連接裝置</string>-->

    <!-- navigation_drawer_close -->
    <string name="navigation_drawer_close">關閉側邊選單</string>
    <string name="navigation_drawer_open">開側邊選單</string>

    <string name="navigation_menu_label_record">紀錄</string>
    <string name="navigation_menu_label_Other">其他</string>

    <string name="navigation_menu_OnOff">啟動/關閉</string>
    <string name="navigation_menu_On">啟動</string>
    <string name="navigation_menu_model_build">手/自動模式</string>
    <string name="navigation_menu_record">查看紀錄</string>
    <string name="navigation_menu_save">儲存</string>
    <string name="navigation_menu_export">匯出</string>
    <string name="navigation_menu_stopConnect">停止連線</string>
    <string name="navigation_menu_clear">清除資料</string>
    <string name="navigation_menu_exit">離開APP</string>
    <string name="navigation_menu_share">分享APP</string>
    <string name="navigation_menu_send">回報問題</string>

    <string name="record_list">歷史紀錄</string>
    <string name="tempUnit">°C</string>
    <string name="temp_beans">豆溫</string>
    <string name="temp_stove">爐溫</string>
    <string name="temp_environment">環溫</string>
    <string name="power_on">On</string>
    <string name="power_off">Off</string>
    <string name="model_manual">手動</string>
    <string name="model_auto">自動</string>
    <string name="enter_beans">下豆</string>
    <string name="exit_beans">出豆</string>
    <string name="first_crack">一爆</string>
    <string name="second_crack">二爆</string>
    
    <string name="delete">刪除</string>

    <string name="loading">載入中</string>
    <string name="saving">儲存中</string>
    <string name="ble_device_connecting">裝置連線中...</string>
    <string name="ble_device_stop_connecting">停止與裝置連線</string>

    <string name="exit_APP">確定要離開APP</string>
    <string name="exit_APP_describe">點擊Yes離開，反之則否</string>

    <!-- export file-->
    <string name="export_time">時間(秒)</string>
    <string name="exporting">資料匯出中...</string>
    <string name="export_success">資料成功匯出</string>
    <string name="export_fail">紀錄匯出失敗</string>
    <string name="device_connect_wait">等待連線裝置中...</string>
    <string name="device_connecting">裝置連線中...</string>

    <string name="settingTemp">設定溫度</string>
    <string name="appInfo">APP資訊</string>
    <string name="versionNameLabel">版本:</string>

    <string name="startTemp">起始溫度</string>
    <string name="time">時間</string>
    <string name="temp">溫度</string>
</resources>