<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="mainViewModel"
            type="tw.nolions.coffeebeanslife.viewModel.MainViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/temp_beans_label" />

        <TextView
            android:id="@+id/temp_beans"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@{mainViewModel.mBeansTemp}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/temp_stove_label" />

        <TextView
            android:id="@+id/temp_stove"
            android:layout_width="120dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@{mainViewModel.mStoveTemp}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/temp_environment_label" />

        <TextView
            android:id="@+id/temp_environment"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@{mainViewModel.mEnvironmentTemp}" />

    </LinearLayout>
</layout>